# microfis

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  link.ld
include/: common.h  console.h  interrupt.h  io.h  isr.h  keyboard.h  multiboot.h  segmentation.h  shell.h  stdarg.h  stdint.h  stdio.h  string.h
include/kernel/: fs.h  heap.h  interrupt.h  isr.h  kernel.h  keyboard.h  multiboot.h  physical_memory.h  syscall.h  virtual_memory.h
include/libc/: ctype.h  stdbool.h  stdio.h  string.h  unistd.h
src/: common.c  console.c  interrupt.c  io.c  isr.s  kernel.c  keyboard.c  segmentation.c  shell.c  start.s
src/arch/: interrupt.c  isr.s
src/common/: stdio.c  string.c
src/driver/: console.c  io.c  keyboard.c
src/kernel/: kernel.c  kprintf.c  shell.c  syscall.c  virtual_memory.c
src/kernel/arch/: interrupt.c  isr.s  segmentation.c
src/kernel/driver/: console.c  keyboard.c
src/kernel/fs/: fs.c
src/kernel/memory/: heap.c  physical_memory.c  virtual_memory.c
src/libc/: ctype.c  stdio.c  string.c  unistd.c
